<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.firstinspires.ftc.robotcontroller.internal.FCSMainActivity"
    android:background="#030202"
    android:id="@+id/screenLayoutFCS">
    <ImageView
        android:id="@+id/chapFCSLogo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/chapfcs"
        android:contentDescription="@string/chapFCSLogo"
        android:layout_marginTop="30dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoPicker"
        android:background="@color/white"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/autoText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teleopText"
        android:layout_marginTop="100dp"
        android:text="@string/teleopText"
        android:textColor="#ffffff"
        android:inputType="none"
        android:layout_alignTop="@+id/autoPicker"
        android:layout_alignLeft="@+id/fieldText"
        android:layout_alignStart="@+id/fieldText"
        android:enabled="false"
        tools:ignore="LabelFor,RtlHardcoded"
        android:textSize="18sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/teleOpPicker"
        android:background="@color/white"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/teleopText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="RtlHardcoded" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmButton"
        android:id="@+id/confirmButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/teleopText"
        android:layout_alignStart="@+id/teleopText"
        android:textColor="#ffffff"
        android:background="@drawable/confirm_button"
        android:radius="40dp"
        android:clickable="false"
        tools:ignore="RtlHardcoded"
        android:layout_marginBottom="50dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backButton"
        android:id="@+id/backButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffff"
        android:visibility="invisible"
        android:background="@drawable/back_button"
        tools:ignore="RtlHardcoded"
        android:layout_marginBottom="50dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/matchNumber"
        android:layout_alignBottom="@+id/matchText"
        android:layout_toEndOf="@+id/autoText"
        android:textSize="18sp"
        android:layout_alignTop="@+id/matchText"
        android:layout_marginLeft="0dp"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="3dp"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/autoText"
        android:text="@string/autoText"
        android:textColor="#ffffff"
        android:enabled="false"
        android:inputType="none"
        android:layout_marginTop="30dp"
        tools:ignore="LabelFor"
        android:layout_below="@+id/matchNumber"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fieldOptions"
        android:background="@color/white"
        android:layout_marginRight="60dp"
        android:layout_marginTop="10dp"
        tools:ignore="RtlHardcoded"
        android:layout_below="@+id/chapFCSLogo"
        android:layout_toEndOf="@+id/autoText"
        android:theme="@style/AppBaseTheme" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fieldText"
        android:enabled="false"
        android:text="@string/fieldText"
        android:background="#020202"
        android:inputType="none"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:layout_marginLeft="0dp"
        tools:ignore="LabelFor,RtlHardcoded"
        android:layout_alignTop="@+id/fieldOptions"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match"
        android:id="@+id/matchText"
        android:elevation="1dp"
        tools:targetApi="lollipop"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/fieldText"
        android:layout_alignParentStart="true"
        android:textAppearance="@android:style/TextAppearance"
        android:textColor="@color/white" />

    <TextView
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/errorMessage"
        android:visibility="invisible"
        android:textColor="#ffffff"
        android:textSize="40sp"
        tools:ignore="RtlHardcoded"
        android:textAlignment="center"
        android:layout_marginTop="26dp"
        android:layout_width="wrap_content"
        android:layout_below="@+id/autoPicker"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp" />

</RelativeLayout>